Fixes some alignment issues

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -75,7 +75,7 @@
     --pat-select-box-arrow-background-colour: rgba(0, 0, 0, 0.1);
     --pat-select-box-arrow-text-colour: inherit;
     --pat-select-box-font-size: var(--pat-form-input-field-font-size);
-    --pat-select-arrow-edge-distance: 10px;
+    --pat-select-arrow-edge-distance: 12px;
     --pat-select-box-height: var(--pat-form-input-field-line-height);
     --pat-select-box-font-size: 1rem;
 
